[gd_scene load_steps=39 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes2/SexOverTable.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=446]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=447]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=474]
animation = "SexOverTableFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=475]
animation = "SexOverTableInside_1-loop"

[sub_resource type="AnimationNodeAnimation" id=476]
animation = "SexOverTableLick_1-loop"

[sub_resource type="AnimationNodeAnimation" id=477]
animation = "SexOverTableTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=478]
animation = "SexOverTable_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=479]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=480]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=481]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=482]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=483]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=484]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=485]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=486]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=487]
states/SexOverTableFast_1-loop/node = SubResource( 474 )
states/SexOverTableFast_1-loop/position = Vector2( 323, 385 )
states/SexOverTableInside_1-loop/node = SubResource( 475 )
states/SexOverTableInside_1-loop/position = Vector2( 372, 182 )
states/SexOverTableLick_1-loop/node = SubResource( 476 )
states/SexOverTableLick_1-loop/position = Vector2( 673, 190 )
states/SexOverTableTease_1-loop/node = SubResource( 477 )
states/SexOverTableTease_1-loop/position = Vector2( 487, 66 )
states/SexOverTable_1-loop/node = SubResource( 478 )
states/SexOverTable_1-loop/position = Vector2( 388, 287 )
transitions = [ "SexOverTableTease_1-loop", "SexOverTableInside_1-loop", SubResource( 479 ), "SexOverTableInside_1-loop", "SexOverTableTease_1-loop", SubResource( 480 ), "SexOverTableTease_1-loop", "SexOverTableLick_1-loop", SubResource( 481 ), "SexOverTableLick_1-loop", "SexOverTableTease_1-loop", SubResource( 482 ), "SexOverTableInside_1-loop", "SexOverTable_1-loop", SubResource( 483 ), "SexOverTable_1-loop", "SexOverTableInside_1-loop", SubResource( 484 ), "SexOverTable_1-loop", "SexOverTableFast_1-loop", SubResource( 485 ), "SexOverTableFast_1-loop", "SexOverTable_1-loop", SubResource( 486 ) ]
start_node = "SexOverTableTease_1-loop"
graph_offset = Vector2( 35, -6 )

[sub_resource type="AnimationNodeBlendTree" id=488]
graph_offset = Vector2( -311.69, 13.9555 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 487 )
nodes/StateMachine/position = Vector2( 200.31, 100.956 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "CuffsBlend", "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=460]

[sub_resource type="AnimationNodeAnimation" id=491]
animation = "SexOverTableFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=492]
animation = "SexOverTableInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=493]
animation = "SexOverTableLick_2-loop"

[sub_resource type="AnimationNodeAnimation" id=494]
animation = "SexOverTableTease_2-loop"

[sub_resource type="AnimationNodeAnimation" id=495]
animation = "SexOverTable_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=496]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=497]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=498]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=499]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=500]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=501]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=502]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=503]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=489]
states/SexOverTableFast_2-loop/node = SubResource( 491 )
states/SexOverTableFast_2-loop/position = Vector2( 278, 356 )
states/SexOverTableInside_2-loop/node = SubResource( 492 )
states/SexOverTableInside_2-loop/position = Vector2( 293, 166 )
states/SexOverTableLick_2-loop/node = SubResource( 493 )
states/SexOverTableLick_2-loop/position = Vector2( 639, 157 )
states/SexOverTableTease_2-loop/node = SubResource( 494 )
states/SexOverTableTease_2-loop/position = Vector2( 440, 64 )
states/SexOverTable_2-loop/node = SubResource( 495 )
states/SexOverTable_2-loop/position = Vector2( 293, 263 )
transitions = [ "SexOverTableTease_2-loop", "SexOverTableInside_2-loop", SubResource( 496 ), "SexOverTableInside_2-loop", "SexOverTableTease_2-loop", SubResource( 497 ), "SexOverTableInside_2-loop", "SexOverTable_2-loop", SubResource( 498 ), "SexOverTable_2-loop", "SexOverTableInside_2-loop", SubResource( 499 ), "SexOverTable_2-loop", "SexOverTableFast_2-loop", SubResource( 500 ), "SexOverTableFast_2-loop", "SexOverTable_2-loop", SubResource( 501 ), "SexOverTableTease_2-loop", "SexOverTableLick_2-loop", SubResource( 502 ), "SexOverTableLick_2-loop", "SexOverTableTease_2-loop", SubResource( 503 ) ]
start_node = "SexOverTableTease_2-loop"

[sub_resource type="AnimationNodeBlendTree" id=490]
graph_offset = Vector2( -322.532, 74.6842 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 489 )
nodes/StateMachine/position = Vector2( 160, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "CuffsBlend", "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=473]

[node name="SexOverTable" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.317465, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.69572, -0.041567, 0 )

[node name="Doll3D2" parent="." index="2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.696, -0.042, 0.01 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 488 )
anim_player = NodePath("../Doll3D/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 460 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 490 )
anim_player = NodePath("../Doll3D2/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 473 )

[node name="Sprite3D2" type="Sprite3D" parent="." index="5"]
transform = Transform( 0.322, 0, 0, 0, 1, 0, 0, 0, 1, -1.73492, 3.06913, 1.76575 )
modulate = Color( 0.34902, 0.34902, 0.34902, 1 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Sprite3D3" type="Sprite3D" parent="." index="6"]
transform = Transform( 0.049, 0, 0, 0, 8.518, 0, 0, 0, 1, -1.73492, 0.452077, -3.26151 )
modulate = Color( 0.34902, 0.34902, 0.34902, 1 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D/DollSkeleton2"]
[editable path="Doll3D2"]
[editable path="Doll3D2/DollSkeleton"]
[editable path="Doll3D2/DollSkeleton2"]
